fix: SubHeaderItems Scss파일 수정/ align center 추가

--- a/taskify-web/src/components/commons/ui-sub-header/SubHeaderItems.module.scss
+++ b/taskify-web/src/components/commons/ui-sub-header/SubHeaderItems.module.scss
@@ -3,6 +3,7 @@
 
 .container {
   display: flex;
+  align-items: center;
   width: 100%;
   gap: 4rem;
 }
